correcciones post calse juliio y TP terminado, actualizar tests